(Raster)

add click always raises patch... :)

-------------------------------------------------------------------------------

Tue Sep 14 15:34:11 EDT 1999
(Christian)

Don't use the fallback border for group borders. 


-------------------------------------------------------------------------------

Tue Sep 14 15:54:25 EDT 1999
(Christian)

Ooops, the middle button in the titlebar did raise/lower and show/hide
group borders at the same time. Changed show/hide group borders
to shift-middleclick.


-------------------------------------------------------------------------------

Wed Sep 14 18:52:24 EDT 1999
(Christian)

I hope this fixes the segfault that Technoir reported.


-------------------------------------------------------------------------------

Tue Sep 14 17:06:08 PDT 1999
(Raster)

ok - go make desktop windows off the screen.... :)

-------------------------------------------------------------------------------

Tue Sep 14 18:55:40 PDT 1999
(Raster)

and double check that ewins didnt go missing whilst we were dragging them
in the pager

-------------------------------------------------------------------------------

Wed Sep 15 09:34:16 PDT 1999
(Raster)

fixe over sealous ewin existance catching.. 

-------------------------------------------------------------------------------

Wed Sep 15 10:46:01 PDT 1999
(Raster)

get rid of cruft in all settigns boxes - make them smaller so they fit on 
6480x480 screens 

-------------------------------------------------------------------------------

Wed Sep 15 15:40:07 PDT 1999
(Mandrake)

KDE part four thousand eight hundred and two.
no more KDE kpanel segfaults.
the taskbar and the desktop pager still don't have names in them, and E for
some reason isn't triggering update events.  but we'll fix that soon enough.
here's another taste of the kde support though.

-------------------------------------------------------------------------------

Wed Sep 15 19:09:52 PDT 1999
(Mandrake)

syncing kde code