@@ -1813,3 +1813,14 @@ Wed Sep 15 19:09:52 PDT 1999
 (Mandrake)
 
 syncing kde code
+
+-------------------------------------------------------------------------------
+
+Thu Sep 16 12:04:54 PDT 1999
+(Raster)
+
+added patch to fix some behavior of raiselower
+
+fixed pager starting up shaded problem
+
+fixed iconfiicaton of thing son other desktops problem
